--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,7 @@
 	<groupId>com.truvo</groupId>
 	<artifactId>getdrunk</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 	<name>GetDrunk</name>
 
 	<properties>
@@ -21,6 +22,11 @@
 			<artifactId>elasticsearch</artifactId>
 			<version>0.90.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.sparkjava</groupId>
+			<artifactId>spark-core</artifactId>
+			<version>0.9.9.7-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -36,4 +42,11 @@
 			</plugin>
 		</plugins>
 	</build>
+	
+	<repositories>
+		<repository>
+			<id>Spark repository</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+		</repository>
+	</repositories>
 </project>
